force-app/main/default/objects/CWS_CPQ_Template_Resources__c/CWS_CPQ_Template_Resources__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CPQ Template Resources</label>
</CustomObject>