force-app/main/default/objects/CWS_CPQ_Template_Resources__c/fields/ConnectWise_Logo__c.field-meta.xml
<CustomField>
    <fullName>ConnectWise_Logo__c</fullName>
    <description>Template: Document Id for ConnectWise Logo</description>
    <inlineHelpText>Template: Document Id for ConnectWise Logo</inlineHelpText>
    <label>ConnectWise Logo</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>