force-app/main/default/objects/CWS_CPQ_Template_Resources__c/fields/CWS_ConnectWise_Banner__c.field-meta.xml
<CustomField>
    <fullName>CWS_ConnectWise_Banner__c</fullName>
    <description>Template: Document ID for ConnectWise Banner</description>
    <inlineHelpText>Template: Document ID for ConnectWise Banner</inlineHelpText>
    <label>ConnectWise Banner</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>