force-app/main/default/objects/CWS_CPQ_Template_Resources__c/fields/CWS_ConnectWise_Header__c.field-meta.xml
<CustomField>
    <fullName>CWS_ConnectWise_Header__c</fullName>
    <description>Template: Document Id for ConnectWise Header Logo</description>
    <inlineHelpText>Template: Document Id for ConnectWise Header Logo</inlineHelpText>
    <label>ConnectWise Header</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>