force-app/main/default/objects/CWS_CPQ_Template_Resources__c/fields/CWS_ConnectWise_Signature__c.field-meta.xml
<CustomField>
    <fullName>CWS_ConnectWise_Signature__c</fullName>
    <description>Template: Document Id for ConnectWise Signature</description>
    <inlineHelpText>Template: Document Id for ConnectWise Signature</inlineHelpText>
    <label>ConnectWise Signature</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>